Add docs for /ping and /logs
